examples/errors/global_panic.tm
namespace Main004;

int32 main() {
    panic("something went wrong!");
    ret 0;
}
